--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "cesium-demo",
   "version": "0.0.0",
   "scripts": {
+    "predeploy": "npm run build:prod -- --base-href=https://asafMasa.github.io/ng2-video-cards/ --deploy-url=https://asafMasa.github.io/ng2-video-cards/",
+    "deploy": "gh-pages --repo https://$GITHUB_TOKEN@github.com/asafMasa/ng2-video-cards.git -d dist/ng2-video-cards",
+    "deploy:local": "gh-pages -d dist/ng2-video-cards",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -20,7 +24,9 @@
     "@angular/platform-browser": "~7.0.0-rc.0",
     "@angular/platform-browser-dynamic": "~7.0.0-rc.0",
     "@angular/router": "~7.0.0-rc.0",
+    "cesium": "^1.52.0",
     "core-js": "^2.5.4",
+    "gh-pages": "^2.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
